# fastapi-quick-start

./: .dockerignore  .env.template  .gitignore  Dockerfile  docker-compose.yaml  logging_config.json  pyproject.toml
src/: config.py  db.py  main.py
src/api/: __init__.py  docs.py
src/api/v1/: __init__.py
src/api/v1/dependencies/: db.py
src/gunicorn/: app.py  run.py
src/migrations/: env.py
src/models/: base.py
src/models/mixins/: primary_key.py  timing.py
src/models/utils/: transform_titles.py
src/repos/: base.py
src/repos/mappers/: base.py
src/schemas/: base.py
src/services/: base.py
src/utils/: db_tools.py  exceptions.py  logging.py
tests/: conftest.py  test_1.py
